--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   http: ^0.13.4
   path_provider: ^2.0.10
 
+  screenshot: ^1.2.3
+  social_share: ^2.2.1
+  share: ^2.0.4
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
